# docker_dataengjneering_module1

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main.yml
ny_taxi_postgres_data/18/docker/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841  pg_internal.init
ny_taxi_postgres_data/18/docker/base/16384/: 13481  2619  pg_internal.init
ny_taxi_postgres_data/18/docker/base/4/: 13481  2609_fsm
ny_taxi_postgres_data/18/docker/base/5/: 2619  pg_internal.init
ny_taxi_postgres_data/18/docker/global/: 1260  1262  2671  pg_control  pg_internal.init
ny_taxi_postgres_data/18/docker/pg_stat/: pgstat.stat
pipeline/: Dockerfile  Dockerfile.ingest  README.md  Untitled1.ipynb  Untitled2.ipynb  etl_yellow_2021_01.py.py  ingest.py  ingestincremental.py  load_parquet_to_postgres.py  notebook.ipynb  notebook1ipynb  notebook2.ipynb  pipeline.py  pyproject.toml
