[project]
name = "pipeline"
version = "0.1.0"
description = "Parquet-to-Postgres streaming pipeline"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pgcli>=4.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab-git>=0.51.0",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
]
